--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <a href="https://www.instagram.com/susatyo_aw.an/" target="_blank"><i class="fa-brands fa-instagram" target="_blank"></i></a>
         <a href="mailto:susatyo441@gmail.com"><i class="fas fa-envelope"></i></a>
         <a href="https://twitter.com/Gelorawan_SJP" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://api.whatsapp.com/send?phone=083806500328" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=+6283806500328" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
       </div>
       <div class="copyright">
