--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="name">
         <div class="wrapper">
         <div class="position">
-        Hi! I am
+        Hi! My Name is
       </div>
       <ul class="dynamic-txts">
         <li><span>Gelorawan</span></li>
