--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="about-me" id="about-me">
       <div class="judul" data-aos="fade-up">
-        <div class="judul1">About Me</div>
+        <div class="judul1">About Meeeeeeeee</div>
       </div>
       <div class="judul2" data-aos="fade-up">Know Me More</div>
       <div class="content" data-aos="fade-up">
