--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     </div>
     <div class="about-me" id="about-me">
       <div class="judul" data-aos="fade-up">
-        <div class="judul1">About Meeeeeeeee</div>
+        <div class="judul1">About Me</div>
       </div>
       <div class="judul2" data-aos="fade-up">Know Me More</div>
       <div class="content" data-aos="fade-up">
         <div class="content1">
         <div class="description">Hi! I am<p class="nama">Gelorawan Susatyo</p></div>
-        <div class="deskripsi">Saya adalah mahasiswa yang sedang menuntut ilmu di Politeknik Negeri Semarang. Saya mengambil program studi teknologi rekayasa komputer selama 4 tahun. Hobi saya saat ini adalah mempelajari Front-End Web Developer dan Android Developer. Dengan semangat belajar yang tinggi saya siap menerima undangan magang dari pengunjung sekalian.</div>
+        <div class="deskripsi">Saya adalah mahasiswa yang sedang menuntut ilmu di Politeknik Negeri Semarang. Saya mengambil program studi teknologi rekayasa komputer selama 4 tahun. Hobi saya saat ini adalah berolahraga. Fokus utama saya saat ini adalah menjadi web developer dimana saya bisa mengaplikasikan kemampuan dan pengetahuan saya.</div>
       </div>
       <div class="bio">
-        <div class="lahir">Name: <br><p>Gelorawan Susatyo Jati Pamungkas</p><br>Date of Birth:<br><p>16 January, 2003</p><br>From: <br><p>Bekasi, Indonesia.</p></div>
+        <div class="lahir">Name: <br><p>Gelorawan Susatyo Jatipamungkas</p><br>Date of Birth:<br><p>16 January, 2003</p><br>From: <br><p>Bekasi, Indonesia.</p></div>
       </div> 
     </div> 
     </div>
@@ -62,17 +62,17 @@
         <div class="education3">
           My Experience
           <div class="education2">
-            Practical Work: <br><p class="line1">PT. Bumjin Electronics Indonesia / October 2019 - January 2020 <br>PT. Yuju Indonesia / February 2020 - April 2020</p><br>Scientific Article Competition<br><p>1st Place / February 2022</p>
+            Intern: <br><p class="line1">PT. Bumjin Electronics Indonesia / October 2019 - January 2020 <br>PT. Yuju Indonesia / February 2020 - April 2020</p><br>Scientific Article Competition<br><p>1st Place / February 2022</p>
         </div>
         </div>
         <div class="education1">
           My Skills
           <div class="skill">
-            <h4>Excel<p>85%</p></h4> 
+            <h4>Laravel PHP <p>90%</p></h4> 
             <hr class="excel">
-            <h4>Kotlin <p>50%</p></h4> 
+            <h4>Android Programming <p>80%</p></h4> 
             <hr class="kotlin">
-            <h4>Video/Photo Editing <p>90%</p></h4>
+            <h4>Game Development Unity <p>75%</p></h4>
             <hr class="edit">
         </div>
         </div>
@@ -81,9 +81,9 @@
           <div class="skill1">
             <h4>English <p>95%</p></h4>
             <hr class="english">
-            <h4>HTML/CSS <p>85%</p></h4> 
+            <h4>Phyton <p>70%</p></h4> 
             <hr class="html">
-            <h4>Javascript <p>60%</p></h4>
+            <h4>ReactJS <p>60%</p></h4>
             <hr class="java">
         </div>
         </div>
