--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           Intern: <br>
           <p class="line1">PT. Bumjin Electronics Indonesia / October 2019 - January 2020 <br>PT. Yuju Indonesia /
             February 2020 - April 2020</p><br>Scientific Article Competition<br>
-          <p>1st Place / February 2022</p>
+          <p>Winner / February 2022</p>
         </div>
       </div>
       <div class="education1">
@@ -101,7 +101,7 @@
           <h4>English <p>95%</p>
           </h4>
           <hr class="english">
-          <h4>Phyton <p>70%</p>
+          <h4>Python <p>70%</p>
           </h4>
           <hr class="html">
           <h4>ReactJS <p>60%</p>
@@ -114,56 +114,93 @@
   </div>
 
 
-  <div class="education" style="background-color: black; color: white;">
-    <div class="judul">
-      <div class="judul1">Resume</div>
-    </div>
-    <div class="judul2">A summary of My Resume</div>
+  <div class="work">
+    <div class="judul2" style="display: flex; align-items: center; padding-top: 7vh;"><p style=" border-bottom: 0.4vh solid #AA1111; text-align: center; margin: auto;">My Works</p></div>
     <div class="education-content">
       <div class="education1">
-        My Education
-        <div class="education2">
-          Vocational Highschool - Electronical Industry<br>
-          <p class="line1">Mitra Industri MM2100 / 2018 - 2021 </p><br>Bachelor of Applied Science in Computer
-          Engineering<br>
-          <p>Politeknik Negeri Semarang / 2021 - Current</p>
-        </div>
+        Playstation Store
+        <div class="education7">
+          Features:<br>
+          <ul class="unorder">
+            <li>CRUD</li>
+            <li>Pagination & Search</li>
+            <li>Send Invoice via email</li>
+            <li>Review Game</li>
+            <li>User Level</li>
+          </ul>
+          <div class="line1"></div><br>
+          Programming Languages:<br>
+          <ul class="unorder">
+            <li>PHP</li>
+            <li>JavaScript</li>
+          </ul>
+            <br>
+          <div class="contact" style="margin-left: auto;">
+            <a href="https://store.susatyo.com/" target="_blank" class="contact1" style="color: black;">Visit Site <i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
       </div>
-      <div class="education3">
-        My Experience
-        <div class="education2">
-          Intern: <br>
-          <p class="line1">PT. Bumjin Electronics Indonesia / October 2019 - January 2020 <br>PT. Yuju Indonesia /
-            February 2020 - April 2020</p><br>Scientific Article Competition<br>
-          <p>1st Place / February 2022</p>
+      </div>
+      <div class="education8">
+        <div id="idk"></div>
+        <div class="education9" style="display: flex;">
+          <img src="image/ps.jpg" alt="" class="working">
         </div>
       </div>
       <div class="education1">
-        My Skills
-        <div class="skill">
-          <h4>Laravel PHP <p>90%</p>
-          </h4>
-          <hr class="excel">
-          <h4>Android Programming <p>80%</p>
-          </h4>
-          <hr class="kotlin">
-          <h4>Game Development Unity <p>75%</p>
-          </h4>
-          <hr class="edit">
+        API Football
+        <div class="education7">
+          Features:<br>
+          <ul class="unorder">
+            <li>Votes & Comments</li>
+            <li>Using Football API</li>
+            <li>Provide API for Votes & Comments</li>
+            <li>Search</li>
+            <li>Schedule, Table, Player Data, etc</li>
+            <li>CRUD</li>
+          </ul>
+          <div class="line1"></div><br>
+          Programming Languages:<br>
+          <ul class="unorder">
+            <li>PHP</li>
+          </ul>
+            <br>
+          <div class="contact" style="margin-left: auto;">
+            <a href="https://susatyo.com" class="contact1" target="_blank"  style="color: black;">Visit Site <i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+      </div>
+      </div>
+      <div class="education8">
+        <div id="idk"></div>
+        <div class="education9" style="display: flex;">
+          <img src="image/football.jpg" alt="" class="working">
         </div>
       </div>
-      <div class="education4">
-        <div class="space"></div>
-        <div class="skill1">
-          <h4>English <p>95%</p>
-          </h4>
-          <hr class="english">
-          <h4>Phyton <p>70%</p>
-          </h4>
-          <hr class="html">
-          <h4>ReactJS <p>60%</p>
-          </h4>
-          <hr class="java">
+      <div class="education1">
+        Rhytm Game
+        <div class="education7">
+          Features:<br>
+          <ul class="unorder">
+            <li>CRUD</li>
+            <li>Sound Setting</li>
+            <li>Autosave Highscore</li>
+            <li>Healthbar</li>
+          </ul>
+          <div class="line1"></div><br>
+          Programming Languages:<br>
+          <ul class="unorder">
+            <li>C#</li>
+            <li>Unity</li>
+          </ul>
+            <br>
+          <div class="contact" style="margin-left: auto;">
+            <a href="https://drive.google.com/drive/folders/11uB7a8kxQqjYR7VzZALrLMvQEkC3Id6X" target="_blank" class="contact1" style="color: black;">Download <i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+      </div>
+      </div>
+      <div class="education8">
+        <div id="idk"></div>
+        <div class="education9" style="display: flex;">
+          <img src="image/game.jpg" alt="" class="working">
         </div>
       </div>
     </div>
