--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             Vocational Highschool - Electronical Industry<br />
             <p class="line1">Mitra Industri MM2100 / 2018 - 2021</p>
             <br />Bachelor of Applied Science in Computer Engineering<br />
-            <p>Politeknik Negeri Semarang / 2021 - Current</p>
+            <p>Politeknik Negeri Semarang / 2021 - 2025</p>
           </div>
         </div>
         <div class="education3">
@@ -106,7 +106,7 @@
             <div class="skill-card">
               <div class="skill-title">Frontend Development</div>
               <ul class="skill-list">
-                <li>React</li>
+                <li>React.js</li>
                 <li>Tailwind CSS</li>
                 <li>Bootstrap</li>
               </ul>
@@ -116,7 +116,6 @@
               <ul class="skill-list">
                 <li>Laravel</li>
                 <li>Next.js</li>
-                <li>React</li>
               </ul>
             </div>
             <div class="skill-card">
@@ -217,6 +216,74 @@
         </p>
       </div>
       <div class="education-content">
+        <div class="education1">
+          ShopVision
+          <div class="education7">
+            Features:<br />
+            <ul class="unorder">
+              <li>Product Detection for Real-time Checkout</li>
+              <li>Product Detection for Effortless Stock-in (Inventory Addition)</li>
+              <li>Comprehensive Product Management</li>
+              <li>
+              Secure Authentication with Google OAuth
+              </li>
+            </ul>
+            <div class="line1"></div>
+            <br />
+            Technologies:<br />
+            <ul class="unorder">
+                <li>YOLO</li>
+                <li>BoT-SORT</li>
+              <li>GoFiber</li>
+              <li>React.js</li>
+              <li>FastAPI</li>
+            </ul>
+            <br />
+            <div class="multiple-github">
+              <div class="contact" style="margin-left: auto">
+                <a
+                  href="https://susatyo.xyz"
+                  target="_blank"
+                  class="contact1"
+                  style="color: black"
+                  >Visit Site <i class="fa-solid fa-arrow-right-long"></i
+                ></a>
+              </div>
+              <br />
+              <div>
+                <p class="github">GitHub:</p>
+                <div class="contact" style="margin-left: auto">
+                  <a
+                    href="https://github.com/susatyo441/frontend-shop-vision"
+                    target="_blank"
+                    class="contact1"
+                    style="color: black"
+                    >Frontend <i class="fa-solid fa-arrow-right-long"></i
+                  ></a>
+                </div>
+                <div class="contact" style="margin-left: auto">
+                  <a
+                    href="https://github.com/susatyo441/be-shop-vision"
+                    target="_blank"
+                    class="contact1"
+                    style="color: black"
+                    >Backend <i class="fa-solid fa-arrow-right-long"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="education8">
+          <div id="idk"></div>
+          <div
+            class="education9"
+            style="display: flex; gap: 4vh; align-items: center"
+          >
+            <img src="image/phone.png" alt="" style="height: 50vh" />
+            <img src="image/phone1.png" alt="" style="height: 50vh" />
+          </div>
+        </div>
         <div class="education1">
           R3-Food
           <div class="education7">
@@ -583,7 +650,7 @@
             ><i class="fa-brands fa-github"></i
           ></a>
 
-          <a href="https://www.instagram.com/someone_in_paris_/" target="_blank"
+          <a href="https://www.instagram.com/ybg_dong/" target="_blank"
             ><i class="fa-brands fa-instagram" target="_blank"></i
           ></a>
           <a href="mailto:susatyo441@gmail.com"
@@ -597,7 +664,7 @@
         </div>
       </div>
       <div class="copyright">
-        &copy; 2024 | By <a href="#about-me">Gelorawan Susatyo</a>
+        &copy; 2025 | By <a href="#about-me">Gelorawan Susatyo</a>
       </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
