--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
             </div>
           </div>
         </div>
-        <div class="education8">
-          <div id="idk"></div>
+        <div class="education8 extra">
+          <div class="idk"></div>
           <div
             class="education9"
             style="display: flex; gap: 4vh; align-items: center"
@@ -342,7 +342,7 @@
           </div>
         </div>
         <div class="education8">
-          <div id="idk"></div>
+          <div class="idk"></div>
           <div
             class="education9"
             style="display: flex; gap: 4vh; align-items: center"
@@ -382,7 +382,7 @@
           </div>
         </div>
         <div class="education8">
-          <div id="idk"></div>
+          <div class="idk"></div>
           <div
             class="education9"
             style="display: flex; gap: 4vh; align-items: center"
@@ -423,7 +423,7 @@
           </div>
         </div>
         <div class="education8">
-          <div id="idk"></div>
+          <div class="idk"></div>
           <div class="education9" style="display: flex">
             <img src="image/adainacara.png" alt="" class="working" />
           </div>
@@ -460,7 +460,7 @@
           </div>
         </div>
         <div class="education8">
-          <div id="idk"></div>
+          <div class="idk"></div>
           <div class="education9" style="display: flex">
             <img src="image/ps.jpg" alt="" class="working" />
           </div>
@@ -496,7 +496,7 @@
           </div>
         </div>
         <div class="education8">
-          <div id="idk"></div>
+          <div class="idk"></div>
           <div class="education9" style="display: flex">
             <img src="image/football.jpg" alt="" class="working" />
           </div>
@@ -530,7 +530,7 @@
           </div>
         </div>
         <div class="education8">
-          <div id="idk"></div>
+          <div class="idk"></div>
           <div class="education9" style="display: flex">
             <img src="image/game.jpg" alt="" class="working" />
           </div>
