feat: junior web programmer

--- a/index.html
+++ b/index.html
@@ -222,18 +222,18 @@
             Features:<br />
             <ul class="unorder">
               <li>Product Detection for Real-time Checkout</li>
-              <li>Product Detection for Effortless Stock-in (Inventory Addition)</li>
-              <li>Comprehensive Product Management</li>
               <li>
-              Secure Authentication with Google OAuth
+                Product Detection for Effortless Stock-in (Inventory Addition)
               </li>
+              <li>Comprehensive Product Management</li>
+              <li>Secure Authentication with Google OAuth</li>
             </ul>
             <div class="line1"></div>
             <br />
             Technologies:<br />
             <ul class="unorder">
-                <li>YOLO</li>
-                <li>BoT-SORT</li>
+              <li>YOLO</li>
+              <li>BoT-SORT</li>
               <li>GoFiber</li>
               <li>React.js</li>
               <li>FastAPI</li>
@@ -637,6 +637,14 @@
             <div class="card-text">MikroTik Certified Network Associate</div>
             <div class="card-image">
               <img src="image/mtcna.png" alt="Certificate" />
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <div class="card-text">Junior Web Programmer</div>
+            <div class="card-image">
+              <img src="image/web_programmer.jpg" alt="Certificate" />
             </div>
           </div>
         </div>
